about周辺の位置調整、画像トリミング

--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
     <main>
         <section>
             <h2>About</h2>
+            <div class="profile">
+                <div class="my-icon">
+                    <img src="images/about.jpg" alt="">
+                </div>
+                <div class="my-name">
+                    <p class="name">
+                        KAKERU MIYAICH
+                    </p>
+                    <p class="message">
+                    text text text text text text text text text text <br>
+                    text text text text text text text text text text text <br>
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
     
