--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Dancing+Script&family=Public+Sans:ital,wght@1,500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anton&family=Dancing+Script&family=Public+Sans:ital,wght@1,500&display=swap"
+        rel="stylesheet">
     <title>Profile</title>
 </head>
+
 <body>
     <header class="page-header wrapper">
         <h1 class="title">Profile</h1>
@@ -35,13 +39,48 @@
                         KAKERU MIYAICH
                     </p>
                     <p class="message">
-                    text text text text text text text text text text <br>
-                    text text text text text text text text text text text <br>
+                        text text text text text text text text text text <br>
+                        text text text text text text text text text text text <br>
                     </p>
                 </div>
             </div>
         </section>
+        <section>
+            <h2>Bicycle</h2>
+            <div class="card-list">
+                <div class="card">
+                    <img src="images/bicycle1.jpg" alt="">
+                    <div class="card-title">
+                        タイトルタイトル
+                    </div>
+                    <div class="card-text">
+                        テキストテキストテキスト
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/bicycle2.jpg" alt="">
+                    <div class="card-title">
+                        タイトルタイトル
+                    </div>
+                    <div class="card-text">
+                        テキストテキストテキスト
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/bicycle3.jpg" alt="">
+                    <div class="card-title">
+                        タイトルタイトル
+                    </div>
+                    <div class="card-text">
+                        テキストテキストテキスト
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    
+<footer class="footer">
+    <p class="copy">© 2023 Profile</p>
+</footer>
 </body>
+
 </html>
